# anamnesis

./: .gitignore  .gitmodules  ARCHITECTURE.md  MANIFEST.in  Makefile  README.md  pyproject.toml
agent_memory/: __init__.py  codex_sync.py  config.py  contracts.py  discovery.py  flex_bridge.py  generic_sqlite.py  ingest.py  init_cli.py  local_imports.py  mcp_server.py  models.py  opencode_sync.py  query.py  service.py  storage.py  uqa_sidecar.py
agent_memory/adapters/: base.py  claude.py  codex.py  opencode.py
agent_memory/backends/: __init__.py  flex.py  uqa.py
agent_memory/hooks/: __init__.py  claude.py  codex.py  common.py  opencode.py
agent_memory/providers/: __init__.py  flex.py  uqa.py
agent_memory/sync/: __init__.py  flex_to_uqa.py
anamnesis/: __init__.py  __main__.py  bootstrap.py  claude_sync.py  cli.py  codex_sync.py  config.py  contracts.py  discovery.py  embeddings.py  flex_compat.py  flex_projection.py  getflex_runtime.py  ingest.py  init_cli.py  local_imports.py  mcp_server.py  opencode_sync.py  preset_runtime.py  projected_cells.py  query.py  service.py  storage.py  uqa_sidecar.py  workspace_scope.py
anamnesis/adapters/: __init__.py  base.py  claude.py  codex.py  opencode.py
anamnesis/hooks/: claude.py  codex.py  common.py  opencode.py
anamnesis/macro_vocabulary/artifact/: SKILL.md
anamnesis/macro_vocabulary/artifact-history/: SKILL.md
anamnesis/macro_vocabulary/artifact-search/: SKILL.md
anamnesis/macro_vocabulary/cadence/: SKILL.md
anamnesis/macro_vocabulary/chronicle/: SKILL.md
anamnesis/macro_vocabulary/crossroads/: SKILL.md
anamnesis/macro_vocabulary/lineage/: SKILL.md
anamnesis/macro_vocabulary/relay/: SKILL.md
anamnesis/macro_vocabulary/survey/: SKILL.md
anamnesis/macro_vocabulary/synopsis/: SKILL.md
anamnesis/macro_vocabulary/thesis/: SKILL.md
anamnesis/macro_vocabulary/vitals/: SKILL.md
docs/: ARCHITECTURE.md  CLIENT_SETUP.md  CLI_REFERENCE.md  DATA_MODEL.md  DEPLOYMENT.md  FEATURE_COVERAGE.md  FLEX_PARITY.md  PYPI_PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  RELEASE_UV.md
examples/clients/claude/: .mcp.json  HOOKS.md  settings.local.json
examples/clients/codex/: HOOKS.md  config.toml  settings.json
examples/clients/opencode/: HOOKS.md  anamnesis.ts  opencode.json
scripts/: bootstrap_workspace_memory.py  release_uv.py  smoke_client_connections.py  verify_uv_release.py
skills-src/bridges/: SKILL.md
skills-src/decision/: SKILL.md
skills-src/delegation-tree/: SKILL.md
skills-src/digest/: SKILL.md
skills-src/file/: SKILL.md
skills-src/file-history/: SKILL.md
skills-src/file-search/: SKILL.md
skills-src/genealogy/: SKILL.md
skills-src/health/: SKILL.md
skills-src/orient/: SKILL.md
skills-src/sprints/: SKILL.md
skills-src/story/: SKILL.md
tests/: test_adapters.py  test_bootstrap.py  test_claude_sync.py  test_cli.py  test_client_smoke.py  test_codex_hooks.py  test_codex_sync.py  test_deployability.py  test_flex_compat.py  test_flex_projection.py  test_flex_provider.py  test_ingest.py  test_init_cli.py  test_mcp_server.py  test_opencode_sync.py  test_projected_cells.py  test_release_uv.py  test_service.py  test_storage.py  test_uqa_sidecar.py
