[project]
name = "anamnesis"
version = "0.1.0"
description = "Anamnesis — UQA-native shared memory for Claude, Codex, and OpenCode"
readme = "README.md"
authors = [
  { name = "sigridjineth", email = "sigrid.jinhyung@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "uqa>=0.2.1",
]
keywords = ["anamnesis", "uqa", "mcp", "sqlite", "claude", "codex", "opencode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/sigridjineth/anamnesis"
Repository = "https://github.com/sigridjineth/anamnesis"
Issues = "https://github.com/sigridjineth/anamnesis/issues"

[project.scripts]
anamnesis = "anamnesis.cli:main"
anamnesis-mcp = "anamnesis.mcp_server:main"
anamnesis-init = "anamnesis.init_cli:main"
anamnesis-ingest = "anamnesis.ingest:main"
anamnesis-codex-sync = "anamnesis.codex_sync:main"
anamnesis-opencode-sync = "anamnesis.opencode_sync:main"
anamnesis-hook-claude = "anamnesis.hooks.claude:main"
anamnesis-hook-codex = "anamnesis.hooks.codex:main"
anamnesis-hook-opencode = "anamnesis.hooks.opencode:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "mcp>=1.0.0",
]

[tool.uv.workspace]
members = ["uqa"]

[tool.uv.sources]
uqa = { workspace = true }

[tool.uv.build-backend]
module-root = ""
